# GBG_AI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: openai.hpp  systemPromt.h
